# mlops-project

./: .gitignore  .pre-commit-config.yaml  404.html  DEPLOYMENT_FRONTEND.md  HYBRID_INFERENCE.md  INTEGRATION_GUIDE.md  LICENSE  README.md  cloudbuild-frontend.yaml  codecov.yaml  data.dvc  index.html  objects.inv  pyproject.toml  renovate.json  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.gcd/: cloudbuild.yaml
.gcp/: cloudbuild.yaml  cloudbuild_api.yaml  config_cpu.yaml  config_gpu.yaml  vertex_ai_train.yaml
.github/workflows/: auto-approve-renovate.yml  deploy_docs.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml
api/: index.html
cli/: index.html
cloud/: index.html
configs/: _config.yaml  config.yaml  sweep.yaml
configs/dataset/: full.yaml  medium.yaml  small.yaml
configs/experiment/: baseline.yaml  best.yaml  production.yaml
configs/training/: baseline.yaml  best_sweep.yaml  default.yaml  production.yaml
data/: index.html
data/preprocessed/full/: state.json
data/preprocessed/medium/: state.json
dockerfiles/: api.dockerfile  entrypoint.sh  frontend.dockerfile  train.dockerfile  train_cpu.dockerfile  train_cu128.dockerfile
docs/: mkdocs.yaml
docs/source/: api.md  cli.md  cloud.md  data.md  diagram.web  dvc.md  frontend.md  getting_started.md  index.md  model.md  overview.md  testing.md  training.md
dvc/: index.html
frontend/: index.html
getting_started/: index.html
model/: index.html
notebooks/: data_experiments.ipynb
overview/: index.html
reports/: README.md
search/: search_index.json
src/customer_support/: api.py  data.py  datamodule.py  evaluate.py  frontend.py  model.py  streamlit_app.py  train.py  visualize.py
testing/: index.html
tests/: __init__.py  test_api.py  test_data.py  test_evaluate.py  test_model.py  test_train.py  test_visualize.py
training/: index.html
wandb/sweep-2tqpto4l/: config-9iyuxpvz.yaml
wandb/sweep-3t44ald7/: config-48gsw4fe.yaml  config-n1eh6o3u.yaml  config-q46k1z6u.yaml
wandb/sweep-3xbvv9ah/: config-97h5eux0.yaml  config-u741hekm.yaml
wandb/sweep-7wn085tb/: config-0o5h6a2o.yaml  config-1g6xysz9.yaml  config-h70i3bn8.yaml
wandb/sweep-7z8any1t/: config-doc1jd5y.yaml  config-sczr0uku.yaml  config-xj5c51j1.yaml
wandb/sweep-kp3wrcyd/: config-0wuxvxul.yaml  config-62vkpwjg.yaml  config-d2endbro.yaml
wandb/sweep-vizqmx4r/: config-0ofdcmzc.yaml  config-260wqo11.yaml  config-3niral0n.yaml  config-b3vz52gd.yaml  config-b5pums02.yaml  config-ii5msgnn.yaml  config-ms8kpvuq.yaml  config-qd4n9ium.yaml  config-uli8ky3t.yaml  config-uv0zuaxo.yaml
wandb/sweep-xp5k3r5w/: config-i3sro8v6.yaml
wandb/sweep-zjgi1mbh/: config-03byycki.yaml  config-04ozsp1c.yaml  config-051nb6uq.yaml  config-0l9vd9tv.yaml  config-1h2pe7le.yaml  config-1xgxyn5o.yaml  config-34mir30y.yaml  config-3epyjlmz.yaml  config-3z440lhk.yaml  config-46itc2kk.yaml  config-49b02udy.yaml  config-4y6v1n70.yaml  config-51rww7vo.yaml  config-57isaj6v.yaml  config-5e7i9p4r.yaml  config-5izzekit.yaml  config-65oqjhs0.yaml  config-69wc7hxi.yaml  config-6degu976.yaml  config-6ipe0pwm.yaml  config-6uyakr4b.yaml  config-74cwjksl.yaml  config-7dluuyus.yaml  config-8osb8xc6.yaml  config-9dz31gbl.yaml  config-9jxqq1e3.yaml  config-9vexk0e3.yaml  config-aaplifgb.yaml  config-acgx4isz.yaml  config-agzciuic.yaml  config-amjxbvy5.yaml  config-au1f9t33.yaml  config-b8vuknph.yaml  config-bsbj6nzh.yaml  config-c5ywbd0d.yaml  config-cxnknys5.yaml  config-d25jjy86.yaml  config-d7ja7bii.yaml  config-dgwtcbku.yaml  config-dlpvo248.yaml  (+98 more)
wandb/sweep-zp0s36r9/: config-1nmduy88.yaml  config-i9rx0i9w.yaml
(+19 files in other folders)
