[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "customer_support"
version = "0.0.1"
description = "DTU MLOps pcourse project."
authors = [
  { name = "Group 41", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "dvc>=3.65.0",
    "dvc-gs>=3.0.2",
    "dvc-ssh>=4.2.2",
    "fastapi==0.128.0",
    "kagglehub>=0.4.0",
    "loguru>=0.7.3",
    "nbconvert>=7.16.6",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "torch==2.9.1",
    "transformers>=4.57.3",
    "typer==0.21.1",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.11",
    "mkdocstrings-python==2.0.1",
    "ipykernel>=7.1.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
source = ["customer_support"]
