[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "customer_support"
version = "0.0.1"
description = "DTU MLOps course project."
authors = [
  { name = "Group 41", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "dvc>=3.65.0",
    "dvc-gs>=3.0.2",
    "fastapi==0.128.0",
    "kagglehub>=0.4.0",
    "lightning>=2.2.0",
    "loguru>=0.7.3",
    "nbconvert>=7.16.6",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    # "torch==2.9.1",
    "torchmetrics>=1.3.0",
    "transformers>=4.57.3",
    "tqdm>=4.66.0",
    "typer==0.21.1",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.11",
    "mkdocstrings-python==2.0.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
cpu = [
    "torch==2.9.1+cpu; sys_platform != 'darwin'",
    "torch==2.9.1; sys_platform == 'darwin'",
    "torchvision==0.24.1+cpu; sys_platform != 'darwin'",
    "torchvision==0.24.1; sys_platform == 'darwin'"
]
cu128 = [
  "torch==2.9.1+cu128", 
  "torchvision==0.24.1",
  "accelerate>=1.12.0",
]

[tool.uv]
conflicts = [
    [ { extra = "cpu" }, { extra = "cu128" } ]
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
source = ["customer_support"]
